// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`formatter snapshots > formatAccount > matches snapshot for a minimal account 1`] = `
"Account:     GDRW2VWJPOB2OQTQMP3ZXPWLF3OGIV5J5NL2M22WRKPPJCMLYJ6
Summary:     A standard account
Subentries:  3
Last ledger: 48000000"
`;

exports[`formatter snapshots > formatAccount > matches snapshot with balances and signers 1`] = `
"Account:     GDRW2VWJPOB2OQTQMP3ZXPWLF3OGIV5J5NL2M22WRKPPJCMLYJ6
Summary:     A standard account
Subentries:  3
Last ledger: 48000000
Home domain: stellar.org

Balances:
  100.0000000  XLM
  50.0000000  USDC:GABC

Signers:
  GDRW2VWJPOB2OQTQMP3ZXPWLF3OGIV5J5NL2M22WRKPPJCMLYJ6  weight=1"
`;

exports[`formatter snapshots > formatTransaction > matches snapshot for a minimal transaction 1`] = `
"Transaction: abc123def456
Status:      success
Summary:     Payment of 100 XLM from Alice to Bob
Ledger:      48000000
Closed at:   2025-01-01T00:00:00Z
Fee:         100 stroops"
`;

exports[`formatter snapshots > formatTransaction > matches snapshot with memo and payments 1`] = `
"Transaction: abc123def456
Status:      success
Summary:     Payment of 100 XLM from Alice to Bob
Ledger:      48000000
Closed at:   2025-01-01T00:00:00Z
Fee:         100 stroops
Memo:        invoice-42

Payments:
  GABC → GXYZ  100.0000000 XLM"
`;

exports[`formatter snapshots > formatTransaction > matches snapshot with skipped operations 1`] = `
"Transaction: abc123def456
Status:      success
Summary:     Payment of 100 XLM from Alice to Bob
Ledger:      48000000
Closed at:   2025-01-01T00:00:00Z
Fee:         100 stroops

Skipped ops: 2"
`;
